--- a/public/stylesheets/app/home.less
+++ b/public/stylesheets/app/home.less
@@ -234,7 +234,7 @@
 
   h3 {
     text-align: center;
-
+    text-transform: uppercase;
   }
 
   ul {
@@ -249,7 +249,7 @@
     display: block;
 
     .fa-check:before {
-      background: rgba(255, 255, 255, 0.1);
+      color: @orange;
       padding: 0.2em;
       margin-right: 0.2em;
     }
